Obfuscate API keys in .env file
Replaced sensitive API keys with placeholders.

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-LIVEKIT_API_KEY=APICzueLXMZQ9rh
-LIVEKIT_API_SECRET=c92dChR1ixezJ7zxYl4JZHF5Yc9ietGk1xFfpPfPGJRD
-LIVEKIT_URL=wss://ai-assistant-cttjfm7h.livekit.cloud
+LIVEKIT_API_KEY=.....
+LIVEKIT_API_SECRET=.....
+LIVEKIT_URL=....
 
-GOOGLE_API_KEY=AIzaSyDqMsS8l_oXNh0lh6p3Wxc3YON2E6e4k2I
+GOOGLE_API_KEY=.....
 
-WEATHER_API_KEY=56417c141647d0cb1aba663af20ddff8
+WEATHER_API_KEY=......
 
-GOOGLE_SEARCH_API_KEY=AIzaSyAvB1QZcSe0MVzpPTiK7R834pvlo6giTr8
-SEARCH_ENGINE_ID=27e6b6605e6924224
+GOOGLE_SEARCH_API_KEY=......
+
+SEARCH_ENGINE_ID=......
