--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LIVEKIT_API_KEY=.....
+LIVEKIT_API_KEY=....
 LIVEKIT_API_SECRET=.....
 LIVEKIT_URL=....
 
@@ -9,3 +9,4 @@ WEATHER_API_KEY=......
 GOOGLE_SEARCH_API_KEY=......
 
 SEARCH_ENGINE_ID=......
+
